--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,7 +6,7 @@ project:
 
 website:
   title: "MUSA 550 Quarto Template"
-  site-url: "https://musa-550-fall-2023.github.io/quarto-website-template" 
+  site-url: "https://CaesarChenchenchen.github.io/temp_quarto" 
   repo-url: https://github.com/MUSA-550-Fall-2023/quarto-website-template 
   repo-actions: [source]
 
@@ -18,17 +18,6 @@ website:
     logo: "images/course-icon.png"
     pinned: true
     align: center
-    tools: 
-      - icon: globe
-        href: https://nickhand.dev
-        text: "Personal Website"
-      - icon: github
-        href: https://github.com/MUSA-550-Fall-2023/
-        text: "MUSA 550 GitHub"
-      - icon: twitter
-        href: https://twitter.com/nicholashand
-        text: "Nick Hand Twitter"         
-
     style: "docked"
     search: true
     collapse-level: 2
@@ -38,10 +27,7 @@ website:
       - about.qmd
       - section: analysis/index.qmd
         contents:
-          - analysis/1-python-code-blocks.qmd 
-          - analysis/2-static-images.ipynb
-          - analysis/3-altair-hvplot.ipynb
-          - analysis/4-folium.ipynb
+          - analysis/Airbnb Selection in NY.ipynb
 
 format:
   html:
