--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,7 +7,7 @@ project:
 website:
   title: "MUSA 550 Quarto Template"
   site-url: "https://CaesarChenchenchen.github.io/temp_quarto" 
-  repo-url: https://github.com/MUSA-550-Fall-2023/quarto-website-template 
+  repo-url: https://CaesarChenchenchen.github.io/temp_quarto 
   repo-actions: [source]
 
   page-footer:
